# RealTimeEdgeDetection

./: AndroidManifest.xml  README.md
cpp/: CMakeLists.txt  native-lib.cpp
java/com/examplefourthjuly/realtimeedgedetection/: MainActivity.java  NativeProcessor.java
res/layout/: activity_main.xml
res/values/: themes.xml
res/values-night/: themes.xml
